--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <audio class="snap" src="./snap.mp3" hidden></audio>
 
   <!-- <script src="scripts.js"></script> -->
-  <script src="scripts-FINISHED.js"></script>
+  <script src="scripts.js"></script>
 
 </body>
 </html>
